--- a/index.html
+++ b/index.html
@@ -7,24 +7,14 @@
         <link rel= "stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">   
 </head>
     <body> 
-    <div class="background"></div>
-    <h1 class="main-header" id="id">Daniel's Personal Blog</h1>
-    <h2 class="China">1 Pound Rice For 1$ :O !!!!    <span> Buy Two For 50% Off</span></h2>
-    <h2 class="China"> <a href="https://www.amazon.com/s?k=rice&crid=1XQZ5Z5M0J3KX&sprefix=rice%2Caps%2C153&ref=nb_sb_noss_1">Click Here To Buy Rice Now!!!</a></h2>
-    <h2 class="China"> <img src="https://tse4.mm.bing.net/th/id/OIP.WZfs2csFFR0R1sP0JhG71QHaEK?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Rice"></h2>
-    <h3 class="Space">                                                        </h3>
-    <h4 class="Badmintons">I love Badminton. If you can hit someone in the face, you call it an "accident"</h4>
-    <h4 class="Badmintons"> <img src="https://tse4.mm.bing.net/th/id/OIP.Ti8xBEZilwiBBpeo-w25UwHaEK?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Badminton"></h3>
-    <h4 class="Badmintons"> <a href="https://www.bing.com/videos/riverview/relatedvideo?&q=getting+hit+in+the+face+by+a+badmintion+racket&qpvt=getting+hit+in+the+face+by+a+badmintion+racket&mid=96BC0CC69C60BD14204296BC0CC69C60BD142042&&FORM=VRDGAR">Click Here To Buy Watch A very Unfunny Video!!!</a></h4>
-    <h3 class="Space"> 
-    <h5 class="Florda">Florida is a state that is way to hot. I've been trust me. >:C</h5>
-    <h5 class="Florda"> <img src="https://tse3.mm.bing.net/th/id/OIP.XWl8dDbADRR_YHv--x67bwHaE8?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Florida"></h5>
-    <h5 class="Florda"> <a href="https://www.expedia.com/Cheap-Flights-To-Orlando.d178294.Travel-Guide-Flights?locale=en_US&siteid=1&semcid=US.MULTILOBF.BING.DT-c-EN.FLIGHT&semdtl=a1687486393.b11322714785944201.g1kwd-82670592743511:loc-190.e1c.m1054b390e1e8f16448a8851cd9f591232.r1.c1.j197016.k145058.d182669900022188.h1e.i1.l1.n1.o1.p1.q1.s1.t1.x1.f1.u1.v1.w1&msclkid=054b390e1e8f16448a8851cd9f591232">Click Here To Buy A Plane Ticket To Florida!!!</a></h5>
-    </body>
+     <div>   
+    <h1 class="main-header" id="id">Asian Starter Kit</h1>
+    </div> 
+    <div>
+    <h2 class="Rice" id="Rice">Very Cheap Rice $5 Per Round<span>50% If you buy 2 pound</span></h2>
+    <img class="rice" img src="https://tse4.mm.bing.net/th/id/OIP.WZfs2csFFR0R1sP0JhG71QHaEK?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Rice">
+</body>
 </html>
