--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
      <div>   
     <h1 class="main-header" id="id">Asian Starter Kit</h1>
     </div> 
-    <div>
-    <h2 class="Rice" id="Rice">Very Cheap Rice $5 Per Round<span>50% If you buy 2 pound</span></h2>
-    <img class="rice" img src="https://tse4.mm.bing.net/th/id/OIP.WZfs2csFFR0R1sP0JhG71QHaEK?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Rice">
+    <div class="Rice">
+    <h2 class="Rice" id="Rice">Very Cheap Rice $5 Per Round!!! <span> 50% If you buy 2 pound</span></h2>
+    <img src ="rice.jpg" alt="rice" width="400" height="300">
+    <a href="https://www.amazon.com/s?k=rice&crid=1Y2Y0X6YF6J5D&sprefix=rice%2Caps%2C147&ref=nb_sb_noss_1">Buy Now</a>
+    </div>
 </body>
 </html>
