--- a/index.html
+++ b/index.html
@@ -6,17 +6,26 @@
         <meta name="viewport" content="width=device-width, intial-scale=1">
         <link rel= "stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">   
-</head>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">   
+    </head>
     <body> 
      <div>   
-    <h1 class="main-header" id="id">Asian Starter Kit</h1>
+    <h1 class="Title" id="id">Asian Starter Kit</h1>
     </div> 
     <div class="Rice">
-    <h2 class="Rice" id="Rice">Very Cheap Rice $5 Per Round!!! <span> 50% If you buy 2 pound</span></h2>
-    <img src ="rice.jpg" alt="rice" width="400" height="300">
-    <a href="https://www.amazon.com/s?k=rice&crid=1Y2Y0X6YF6J5D&sprefix=rice%2Caps%2C147&ref=nb_sb_noss_1">Buy Now</a>
+    <h2 id="Rice">Very Cheap Rice $5 Per Round!!!<span>50% If you buy 2 pound</span></h2>
+    <img src ="rice.jpg" alt="rice" width="600" height="300">
+    <a href="https://www.amazon.com/s?k=rice&crid=1Y2Y0X6YF6J5D&sprefix=rice%2Caps%2C147&ref=nb_sb_noss_1">Click Here To Buy Very Cheap Rice</a>
     </div>
+    <div class="Badminton">
+    <h2 id="Badminton">I love Badminton. If you can hit someone in the face, you call it an "accident >:D.</h2>
+    <img src ="badminton.jpg" alt="badminton" width="600" height="300">
+    <a href="https://www.amazon.com/s?k=badminton+racket&crid=1Z3M6LZ8J0Y6G&sprefix=badminton+racket%2Caps%2C147&ref=nb_sb_noss_1">Click Here To Buy Badminton Racket</a>
+    </div>
+    <div class="Flordia">
+    <h2 id="Flordia">Flordia is so hot and sunny. I got sunburn so much times. You should go there.</h2>
+    <img src ="flordia.jpg" alt="flordia" width="600" height="300">
+    <a href="https://www.tripadvisor.com/Attractions-g28930-Activities-Florida.html">Flordia's Overpriced Parks</a>
 </body>
 </html>
